--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -142,9 +142,41 @@
     "miniuts": "50 Miniuts",
     "payment": "Payment",
     "totalP": "Total payments:",
-    "total": "$48.6"
+    "total": "$48.6",
 
-    
+    "earn": "Earn money any\ntime whenever you want",
+    "how": "How to start selling on Chef",
+    "why": "Why become a chef",
+    "make": "Make money",
+    "it": "It’s completely free to apply. Many chefs make around $1,000 per week.",
+    "be": "Be your own boss",
+    "design": "Design your own menu, set your own prices and work when you want. We’ll help you with payments, logistics and customer support.",
+    "success": "Success stories from sellers",
+    "approved": "Get approved to cook",
+    "submit": "Sign up and submit a sample of your favorite dishes. Pass the food tasting, complete an accredited food safety exam, and choose your menu of dishes.",
+    "pick": "Pick your schedule",
+    "choose": "Choose the days you’d like to cook. As little or as much as you’d like.",
+    "prepare": "Prepare your orders",
+    "can": "Customers can start ordering from you on chef. They’ll order at least a day in advance so you have enough time to get ingredients and prepare their dishes.",
+    "cool": "Cool your dishes",
+    "once": "Once you’ve finished cooking, safely cool your dishes and prepare them for delivery.",
+    "serve": "Serve your customers",
+    "we": "We’ll help you identify the best delivery method available so your customers can get their food safely and on time.",
+    "step1": "Step 1",
+    "step2": "Step 2",
+    "step3": "Step 3",
+    "step4": "Step 4",
+    "step5": "Step 5",
+    "started": "Get Started",
+    "frequently": "Frequently asked questions",
+    "what": "What is chef?",
+    "does": "How does delivery work?",
+    "paid": "How do i get paid?"
+
+
+
+
+
 
 
 }
