--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,7 +8,7 @@
     "last": "Last Name",
     "email": "Email",
     "password": "Password",
-    "description": "By clicking Log in, Sign in with Facebook\nor Sign in with Google you agree to Shef's",
+    "description": "By clicking Log in, Sign in with Facebook or Sign in with Google you agree to Shef's ",
     "and":" and ",
     "term":"Terms of Service",
     "policy":"Privacy Policy.",
@@ -37,8 +37,9 @@
     "gift": "Gift Card",
     "already": "Already A Customer? ",
     "contact": "Contact Us",
+    "privacy": "Privacy Policy",
     "text1" : "The word chef is derived (and shortened) from the term chef de cuisine , the director or head of a kitchen. (The French word comes from Latin caput (head) and is cognate with English chief). In English, the title chef in the culinary profession originated in the haute cuisine of the 19th century. The culinary arts, among other aspects of the French language introduced French loan-words into the English language.",
-    "text2" : "Other names include executive chef, chef manager, head chef, and master chef. This person is in charge of all activities related to the kitchen, which usually includes menu creation, management of kitchen staff, ordering and purchasing of inventory, controlling raw material costs and plating design. Chef de cuisine is the traditional French term from which the English word chef is derived.[2] Head chef is often used to designate someone with the same duties as an executive chef, but there is usually someone in charge of a head chef, possibly making the larger executive decisions such as direction of menu, final authority in staff management decisions, and so on.[3] This is often the case for executive chefs with multiple restaurants. Involved in checking the sensory evaluation of dishes after preparation and they are well aware of each sensory property of those specific dishes. In the UK, the title executive chef normally applies to hotels with multi outlets in the same hotel. Other establishments in the UK tend to use the title head chef.", 
+    "text2" : "Other names include executive chef, chef manager, head chef, and master chef. This person is in charge of all activities related to the kitchen, which usually includes menu creation, management of kitchen staff, ordering and purchasing of inventory, controlling raw material costs and plating design. Chef de cuisine is the traditional French term from which the English word chef is derived.[2] Head chef is often used to designate someone with the same duties as an executive chef, but there is usually someone in charge of a head chef, possibly making the larger executive decisions such as direction of menu, final authority in staff management decisions, and so on.",
     "text3" : "The sous-chef de cuisine (under-chef of the kitchen) is the second-in-command and direct assistant of the chef de cuisine or head chef. This person may be responsible for scheduling the kitchen staff, or substituting when the head chef is absent. Also, he or she will fill in for or assist a chef de partie (line cook) when needed. This person is accountable for the kitchen's inventory, cleanliness, organization, and the continuing training of its entire staff. A sous-chef's duties can also include carrying out the head chef's directives, conducting line checks, and overseeing the timely rotation of all food products. Smaller operations may not have a sous-chef, while larger operations may have more than one.",
     "text4" : "A chef de partie, also known as a station chef or line cook, is in charge of a particular area of production. In large kitchens, each chef de partie might have several cooks or assistants. In most kitchens, however, the chef de partie is the only worker in that department. Line cooks are often divided into a hierarchy of their own, starting with first cook, then second cook, and so on as needed.",
     
@@ -52,7 +53,7 @@
     "north": "North Indian  . Punjabi",
     "reviews": "152 reviews",
     "safety": "Slogan: Food Safety Certified",
-    "i": "I grew up in Punjab, where I learned to cook,\nPunjabi dishes from my mother... ", 
+    "i": "I grew up in Punjab, where I learned to cook, Punjabi dishes from my mother... ",
     "more": "More",
     "items": "ITEMS",
     "asian": "Asian Chiken Salad Meal",
