--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,25 +1,23 @@
 {
-    "header": "Chef", 
-    "signUp": "Sign Up", 
-    "facebook": "Sign in with Facebook", 
+    "header": "Chef",
+    "signUp": "Sign Up",
+    "facebook": "Sign in with Facebook",
     "google": "Sign in with Google",
-    "orWith":"or continue with email",
+    "orWith": "or continue with email",
     "first": "First Name",
     "last": "Last Name",
     "email": "Email",
     "password": "Password",
     "description": "By clicking Log in, Sign in with Facebook or Sign in with Google you agree to Shef's ",
-    "and":" and ",
-    "term":"Terms of Service",
-    "policy":"Privacy Policy.",
+    "and": " and ",
+    "term": "Terms of Service",
+    "policy": "Privacy Policy.",
     "have": "Have an account? ",
     "login": " Sign In",
-
     "or": "or",
     "forgot": "Forgot password?",
-    "not": "Not regestered? ",
-    "creat": " Create an account",
-
+    "not": "Not registered? ",
+    "create": " Create an account",
     "list": "Your List",
     "about": "About Us",
     "help": "Help Center",
@@ -38,17 +36,15 @@
     "already": "Already A Customer? ",
     "contact": "Contact Us",
     "privacy": "Privacy Policy",
-    "text1" : "The word chef is derived (and shortened) from the term chef de cuisine , the director or head of a kitchen. (The French word comes from Latin caput (head) and is cognate with English chief). In English, the title chef in the culinary profession originated in the haute cuisine of the 19th century. The culinary arts, among other aspects of the French language introduced French loan-words into the English language.",
-    "text2" : "Other names include executive chef, chef manager, head chef, and master chef. This person is in charge of all activities related to the kitchen, which usually includes menu creation, management of kitchen staff, ordering and purchasing of inventory, controlling raw material costs and plating design. Chef de cuisine is the traditional French term from which the English word chef is derived.[2] Head chef is often used to designate someone with the same duties as an executive chef, but there is usually someone in charge of a head chef, possibly making the larger executive decisions such as direction of menu, final authority in staff management decisions, and so on.",
-    "text3" : "The sous-chef de cuisine (under-chef of the kitchen) is the second-in-command and direct assistant of the chef de cuisine or head chef. This person may be responsible for scheduling the kitchen staff, or substituting when the head chef is absent. Also, he or she will fill in for or assist a chef de partie (line cook) when needed. This person is accountable for the kitchen's inventory, cleanliness, organization, and the continuing training of its entire staff. A sous-chef's duties can also include carrying out the head chef's directives, conducting line checks, and overseeing the timely rotation of all food products. Smaller operations may not have a sous-chef, while larger operations may have more than one.",
-    "text4" : "A chef de partie, also known as a station chef or line cook, is in charge of a particular area of production. In large kitchens, each chef de partie might have several cooks or assistants. In most kitchens, however, the chef de partie is the only worker in that department. Line cooks are often divided into a hierarchy of their own, starting with first cook, then second cook, and so on as needed.",
-    
+    "text1": "The word chef is derived (and shortened) from the term chef de cuisine , the director or head of a kitchen. (The French word comes from Latin caput (head) and is cognate with English chief). In English, the title chef in the culinary profession originated in the haute cuisine of the 19th century. The culinary arts, among other aspects of the French language introduced French loan-words into the English language.",
+    "text2": "Other names include executive chef, chef manager, head chef, and master chef. This person is in charge of all activities related to the kitchen, which usually includes menu creation, management of kitchen staff, ordering and purchasing of inventory, controlling raw material costs and plating design. Chef de cuisine is the traditional French term from which the English word chef is derived.[2] Head chef is often used to designate someone with the same duties as an executive chef, but there is usually someone in charge of a head chef, possibly making the larger executive decisions such as direction of menu, final authority in staff management decisions, and so on.",
+    "text3": "The sous-chef de cuisine (under-chef of the kitchen) is the second-in-command and direct assistant of the chef de cuisine or head chef. This person may be responsible for scheduling the kitchen staff, or substituting when the head chef is absent. Also, he or she will fill in for or assist a chef de partie (line cook) when needed. This person is accountable for the kitchen's inventory, cleanliness, organization, and the continuing training of its entire staff. A sous-chef's duties can also include carrying out the head chef's directives, conducting line checks, and overseeing the timely rotation of all food products. Smaller operations may not have a sous-chef, while larger operations may have more than one.",
+    "text4": "A chef de partie, also known as a station chef or line cook, is in charge of a particular area of production. In large kitchens, each chef de partie might have several cooks or assistants. In most kitchens, however, the chef de partie is the only worker in that department. Line cooks are often divided into a hierarchy of their own, starting with first cook, then second cook, and so on as needed.",
     "welcome": "Welcome Zahra",
     "zahra": "Zahra",
-    "yazdani": "Yazdani", 
+    "yazdani": "Yazdani",
     "zahray": "z.yazdani623@gmail.com",
     "save": "Save Change",
-
     "sukhdeep": "Chef Sukhdeep Menu",
     "north": "North Indian  . Punjabi",
     "reviews": "152 reviews",
@@ -62,43 +58,39 @@
     "add": "Add to Cart",
     "addList": "ADD TO LIST",
     "details": "this includes spinach, eggs, potatoes and cheese",
-
     "zyazdani": "Zahra Yazdani",
     "browsing": "Browsing Zip Code",
     "profile": "Profile",
     "orders": "Orders",
     "message": "Messages",
-    "following":"Following",
+    "following": "Following",
     "delivery": "Delivery Address",
-
     "delicious": "Delicious \nfoods from \naround the world",
     "enter": "Enter your zip code",
-    "aboutSite":"We servises to you with \nDelitious Foods \nand different flavors from around the world\nor Make Money By Cooking",
+    "aboutSite": "We services to you with \nDelicious Foods \nand different flavors from around the world\nor Make Money By Cooking",
     "get": "Get to know our chefs and dishes",
     "works": "About Chef Works",
     "aboutChef1": "A chef is a trained professional cook and tradesman who is proficient in all aspects of food preparation, often focusing on a particular cuisine. The word chef is derived from the term chef de cuisine (French pronunciation), the director or head of a kitchen. Chefs can receive formal training from an institution, as well as by apprenticing with an experienced chef.",
     "aboutChef2": "There are different terms that use the word chef in their titles, and deal with specific areas of food preparation. Examples include the sous-chef, who acts as the second-in-command in a kitchen, and the chef de partie, who handles a specific area of production. The kitchen brigade system is a hierarchy found in restaurants and hotels employing extensive staff,many of which use the word chef in their titles.",
     "doYou": "Do you want food with various and delicious flavors or will you become one of the chefs?",
-
-
     "all": "all",
     "iranian": "Iranian",
     "japanese": "Japanese",
-    "korean":"Korean",
+    "korean": "Korean",
     "american": "American",
     "italian": "Italian",
     "favorites": "Favorites",
     "ane": "Ane k.",
     "newest": "The Newest Chefs",
     "discount": "Has a Discount",
-    "iranianChefs":"Iranian Chefs",
-    "americanChefs":"American Chefs",
-    "koreanChefs":"Korean Chefs",
-    "japaneseChefs":"Japanese Chefs",
+    "iranianChefs": "Iranian Chefs",
+    "americanChefs": "American Chefs",
+    "koreanChefs": "Korean Chefs",
+    "japaneseChefs": "Japanese Chefs",
     "albert": "Albert F.",
     "ruben": "Ruben L.",
     "joina": "Joina B.",
-    "iranianF":"Iranian Foods (Halal Foods)",
+    "iranianF": "Iranian Foods (Halal Foods)",
     "japaneseF": "Japanese Foods",
     "koreanF": "Korean Foods",
     "americanF": "American Foods",
@@ -108,26 +100,22 @@
     "sashi": "Sashi M.",
     "videos": "Videos",
     "buy": "Buy a Gift Card",
-
-
-    "search": "Search",
-    "hint":"Search by Chefs and Foods...",
+    "hint": "Search by Chefs and Foods...",
     "foods": "Foods",
     "mutter": "Mutter Panner",
-    "ru": "Shes Ru t.",    
-    "injera":"Injera Flatbread",
-    "anu": "chef Anu s.",    
-    "show": "Show more", 
-    "chefs": "Chefs", 
-    "wahid":"Wahid k.",
-    "esfahan":"Esfahan",
+    "ru": "Shes Ru t.",
+    "injera": "Injera Flatbread",
+    "anu": "chef Anu s.",
+    "show": "Show more",
+    "chefs": "Chefs",
+    "wahid": "Wahid k.",
+    "esfahan": "Esfahan",
     "anuk": "Anu k.",
     "northi": "North Indian",
     "punjabi": "Punjabi",
     "no1": "4.7",
-    "no2":"4.8",
-    "no3":"4.6",
-
+    "no2": "4.8",
+    "no3": "4.6",
     "zipcode": "94110",
     "yourFoods": "your order",
     "carrot": "Carrot Halwa",
@@ -138,13 +126,12 @@
     "phone": "Phone Number",
     "address": "Address",
     "instructions": "Delivery Instructions",
-    "instructionshint": "ex: call me when arrive",
+    "instructionsHint": "ex: call me when arrive",
     "time": "Delivery Time:",
-    "miniuts": "50 Miniuts",
+    "minutes": "50 Minutes",
     "payment": "Payment",
     "totalP": "Total payments:",
     "total": "$48.6",
-
     "earn": "Earn money any\ntime whenever you want",
     "how": "How to start selling on Chef",
     "why": "Why become a chef",
@@ -154,7 +141,7 @@
     "design": "Design your own menu, set your own prices and work when you want. We’ll help you with payments, logistics and customer support.",
     "success": "Success stories from sellers",
     "approved": "Get approved to cook",
-    "submit": "Sign up and submit a sample of your favorite dishes. Pass the food tasting, complete an accredited food safety exam, and choose your menu of dishes.",
+    "sample": "Sign up and submit a sample of your favorite dishes. Pass the food tasting, complete an accredited food safety exam, and choose your menu of dishes.",
     "pick": "Pick your schedule",
     "choose": "Choose the days you’d like to cook. As little or as much as you’d like.",
     "prepare": "Prepare your orders",
@@ -171,13 +158,20 @@
     "started": "Get Started",
     "frequently": "Frequently asked questions",
     "what": "What is chef?",
+    "community": "Chef is a community-based platform that enables cooks to sell homemade food to their neighbors. Over the last couple of years, we've helped chefs sell over ۱٬۰۰۰٬۰۰۰ dishes and feed thousands of people around the country. If you're interested in learning more about how you can feed your community, please contact us at onboarding@shef.com.",
     "does": "How does delivery work?",
-    "paid": "How do i get paid?"
-
-
-
-
-
-
-
+    "partner": "We partner with an online payment processing system, which automatically issues payments soon after each day that you cook!",
+    "paid": "How do i get paid?",
+    "varies": "Delivery varies in each market based on local requirements, but we'll help you identify the best delivery method available to you. We're here for you every step of the way!",
+    "easy": "Cooking on Chef is easy. You set your availability and your customers order from your menu on Shef. We’ll notify you of all the orders in an easy-to-read list. Once you’ve finished cooking, you’ll safely cool your dishes and prepare them for delivery. Once your customers receive their food, you’ll get the chance to hear how much they enjoyed it.",
+    "cooking": "What is cooking on Chef?",
+    "submit": "Submit",
+    "cuisine": "Pick a cuisine",
+    "zip": "Zip Code",
+    "agree": "I agree with ",
+    "home": "Home Chef brings people together around the \ndinner table.",
+    "helping": "Helping you save time while enjoying real home cooking and the joy that comes with it.We are proud to support and champion advocacy efforts to expand home cooking laws across the country so that talented cooks everywhere can earn a meaningful income from their own kitchens.",
+    "three": "In the three years since we delivered our very first order, we have now expanded to serve more than 70 million people in 10 states and over 2 million dishes have made their way onto tables across the country.\nEach prepared with love and care by passionate neighbors and reminding us that there’s no taste like home.",
+    "alvin": "We’re Alvin and Joey, two sons of immigrants from Iran and Italy who grew up eating delicious, homemade food from scratch.\nOur stories are those of so many immigrant families who make their way to the United States, filled with uncertainty, hope, and dreams of building a better life for their loved ones.",
+    "our": "Our founding story"
 }
