create home and homeBloc

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -192,7 +192,8 @@
     "biscuit": "biscuit",
     "salt": "salt",
     "recipes": "Recipes",
-    "logOut": "Log Out"
+    "logOut": "Log Out",
+    "refresh": "Refresh"
 
 
 }
