develope in home page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -193,7 +193,8 @@
     "salt": "salt",
     "recipes": "Recipes",
     "logOut": "Log Out",
-    "refresh": "Refresh"
+    "refresh": "Refresh",
+    "sweets": "Sweets"
 
 
 }
