create some pages as details, product

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -194,7 +194,7 @@
     "recipes": "Recipes",
     "logOut": "Log Out",
     "refresh": "Refresh",
-    "sweets": "Sweets"
-
+    "sweets": "Sweets",
+    "view": "view all"
 
 }
