creat productBloc productEvent productState and change some pages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -195,6 +195,7 @@
     "logOut": "Log Out",
     "refresh": "Refresh",
     "sweets": "Sweets",
-    "view": "view all"
+    "view": "view all",
+    "successfully": "َAdded Successfully"
 
 }
