creat comment, commentList, commentBloc, commentRepository, commentDataSource

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -196,6 +196,7 @@
     "refresh": "Refresh",
     "sweets": "Sweets",
     "view": "view all",
-    "successfully": "َAdded Successfully"
+    "successfully": "َAdded Successfully",
+    "register": "Register a Comment"
 
 }
